--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
     "jwt-decode": "^4.0.0",
+    "lightningcss": "^1.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.7",
