--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lightningcss": "^1.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.7",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4",
